monitoring/controllers/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: ops-monitoring
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector: { app: grafana }
  ports:
    - { name: http, port: 3000, targetPort: http }
